# langchain-filesystem-context

./: .env  README.md  index.html  main.py  pyproject.toml
data/documents/: history_of_ai.txt  python_programming.txt
data/vector_db/: file_metadata.pkl  index.faiss  index.pkl
src/: config.py  main.py
src/agents/: file_system_agent.py
src/tools/: document_processor.py  file_reader.py
src/utils/: file_indexer.py  llm_factory.py
